# PEAT

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  index.html  params.json
include/: boost_include.hpp  stdlib_include.hpp
src/: analyzer_utility.hpp  constant_def.cpp  constant_def.hpp  file_reader.hpp  file_reader_impl.hpp  format_io_iterator.hpp  main.cpp  thread_control_version.hpp  thread_pool.hpp  thread_pool_update.hpp  tophat.hpp  tuple_utility.hpp  wrapper_tuple_utility.hpp
src/ThreadPool/: common.h  thread_adapter.cpp  thread_adapter.h  thread_container.hpp  thread_job.hpp  thread_pool.cpp  thread_pool.h
src/aligner/: job_distributer.hpp
src/debugger/: logger.hpp
src/format/: curl_recv_impl.hpp  curl_recv_wrapper.hpp  curl_send_impl.hpp  data_source_impl.hpp  fastq.hpp  fastq_reader_impl.hpp  is_tuple_type.hpp
src/iohandler/: basespace_def.hpp  iohandler.hpp
src/iohandler/curl_impl/: curl_impl.hpp  curl_impl_test.cpp  curl_utility.hpp
src/iohandler/handler_device/: device_basespace_setting.hpp  fw_device_basespace.hpp  fw_device_basespace_download.hpp  fw_device_container.hpp  fw_device_ifstream.hpp  fw_device_ofstream.hpp  fw_device_stream.hpp  fw_filter_gzip_compressor.hpp  fw_filter_gzip_decompressor.hpp  fw_utility.hpp
src/iohandler/ihandler/: IhandlerFactory.cpp  IhandlerFactory.h  ihandler.hpp  ihandler_data_source.hpp  ihandler_impl.hpp
src/iohandler/ihandler/format/: fastq_ihandler_impl.hpp
src/other/: file_generator.hpp
src/str_match/: linear_string_match.hpp
src/trimmer/: pair_end_adapter_trimmer.hpp  pair_end_adapter_trimmer_impl.hpp  pair_end_adapter_trimmer_jbd.hpp  peat.hpp  seat.hpp  single_end_adapter_trimmer.hpp  single_end_adapter_trimmer_impl.hpp  single_end_adapter_trimmer_impl_parameter.hpp  single_end_adapter_trimmer_parameter.hpp
test_file/: test_paired1.fq  test_paired2.fq
unit_test/: PeatTest.cpp  single_end_adapter_trimmer_test.cpp
